--- a/src/views/requestContract/style.scss
+++ b/src/views/requestContract/style.scss
@@ -8,21 +8,16 @@
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-.img-preview {
-    margin-top: 20px;
+::v-deep img-preview {
+    position: relative;
+    width: 100%;   
+}
+::v-deep img {
     position: relative;
     width: 100%;
-    padding-top: 142%;
-
-    img {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-    }
+    height: 345px;
+    margin-top: 20px;
+      
 }
 
 .imgPreview img {
