--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -1,4 +1,3 @@
-
 ::v-deep .clr {
     label {
         color: red;
@@ -121,4 +120,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.ant-picker.custom-width-date {
+    width: 300px;
 }
