--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -125,3 +125,19 @@
 .ant-picker.custom-width-date {
     width: 300px;
 }
+
+.custom-button {
+    width: 200px;
+    height: 36px;
+    text-align: left;
+    background: white;
+    border: 1px solid #d9d9d9;
+    padding: 4px 6px;
+}
+
+.custiom-date { 
+    padding: 4px;
+    border-radius: 5px;
+    padding: 1px 5px;
+    margin-right: 5px;
+}
