--- a/src/views/BF/BF3/BF340/style/addnewStyle.scss
+++ b/src/views/BF/BF3/BF340/style/addnewStyle.scss
@@ -1,3 +1,14 @@
+
+.confirm-button {
+    margin-left: 100px;
+}
+
+.confirm-modal p {
+    white-space: normal;
+    font-size: 13px;
+    line-height: 16px;
+}
+
 .email-input .ant-form-item-label {
     white-space: normal;
 
@@ -23,12 +34,14 @@
     line-height: 5px;
 }
 
-
 .label-br label {
     white-space: normal;
 }
 
 .textarea_340 {
-    margin-right: 45px;
+   
+    margin-left: 21px;
+}
+.post-code {
     margin-left: 25px;
 }
