--- a/src/views/BF/BF3/BF340/style/style.scss
+++ b/src/views/BF/BF3/BF340/style/style.scss
@@ -44,3 +44,15 @@
 .search-form .col .item:nth-child(2) {
     margin-left: 30px;
 }
+
+.dflex {
+    display: flex;
+}
+
+.custom-flex {
+    align-items: flex-start;
+    align-items: center;
+}
+label {
+    margin-right: 10px;
+  }
