--- a/src/views/BF/BF2/BF220/style/style.scss
+++ b/src/views/BF/BF2/BF220/style/style.scss
@@ -152,3 +152,13 @@
 .custom-lineHeight {
     line-height: 3px;
 }
+
+.custom-service-search {
+    cursor: pointer;
+    margin-left: 5px;
+    margin-right: 20px;
+}
+
+.search {
+    display: flex;
+}
