--- a/src/views/BF/BF2/BF220/style/popupAdd/index.scss
+++ b/src/views/BF/BF2/BF220/style/popupAdd/index.scss
@@ -193,3 +193,15 @@
   width: 16px;
   height: 16px;
 }
+
+
+::v-deep .ant-form-item-label {
+  width: 150px;
+}
+
+.footer {
+  width: 100%;
+  padding: 10px 0 0 10px;
+  display: flex;
+  justify-content: flex-end;
+}
