--- a/src/views/requestContract/style.scss
+++ b/src/views/requestContract/style.scss
@@ -54,8 +54,7 @@
     text-align: right;
     display: flex;
     justify-content: flex-end;
-    margin-top: 10px;
-    margin-right: -15px;
+    margin-top: 10px; 
 }
 
 ::v-deep textarea {
@@ -82,7 +81,7 @@
 
 .form-item {
     display: flex;
-    margin-top: 15px;
+    margin-top: 5px;
 }
 
 .form-item label {
@@ -260,3 +259,14 @@
         display: none !important;
     }
 }
+
+.custom-checkbox-step-1 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.d-flex {
+    display: flex;
+}
+
+    
