--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -135,7 +135,7 @@
     padding: 4px 6px;
 }
 
-.custiom-date { 
+.custiom-date {
     padding: 4px;
     border-radius: 5px;
     padding: 1px 5px;
@@ -144,4 +144,18 @@
 
 .collapse-content {
     height: 700px;
+}
+
+.ant-collapse-borderless {
+    border-top: 1px solid #d9d9d9;
+}
+
+.ant-collapse-item.ant-collapse-item-active {
+    background: white;
+    border: 1px solid #d9d9d9;
+    border-top: none;
+}
+
+::v-deep .ant-collapse-arrow {
+    font-size: 14px !important;
 }
