--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -28,6 +28,12 @@
     font-size: 11px;
     width: 100%;
     padding-top: 2px;
+    display: flex;
+    align-items: center;
+
+    >div {
+        padding-left: 5px;
+    }
 }
 
 .ant-card-head-title {
