add modal confirm close popup all page BF-3xx

--- a/src/views/BF/BF3/BF320/style/popup/index.scss
+++ b/src/views/BF/BF3/BF320/style/popup/index.scss
@@ -115,6 +115,6 @@
 .custom-footer-modal {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin-top: 15px;
 }
