--- a/src/views/BF/BF3/BF330/style/stylePopup.scss
+++ b/src/views/BF/BF3/BF330/style/stylePopup.scss
@@ -155,7 +155,7 @@
     width: 100%;
     display: flex;
     margin-top: 10px;
-    justify-content: flex-end;
+    justify-content: center;
 
     >div {
         margin-left: 10px;
