--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -165,3 +165,10 @@
 ::v-deep .ant-collapse-arrow {
     font-size: 14px !important;
 }
+
+::v-deep .dx-datagrid-group-opened::before,
+::v-deep .dx-datagrid-group-closed::before {
+    color: black;
+    font-size: 25px;
+    margin-left: 7px;
+}
