update code page 220

--- a/src/views/BF/BF2/BF220/style/popupEdit/index.scss
+++ b/src/views/BF/BF2/BF220/style/popupEdit/index.scss
@@ -63,7 +63,7 @@
 .anticon {
   cursor: pointer;
 }
- 
+
 
 .search-form {
   margin-bottom: 10px;
@@ -204,4 +204,8 @@
   padding: 10px 0 0 10px;
   display: flex;
   justify-content: center;
+}
+
+::v-deep .ant-col.ant-form-item-label label {
+  float: left;
 }
