--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,3 +1,5 @@
+
+// grid scss
 .dx-datagrid-headers .dx-header-row {  
   background-color: #F2F5F7;  
 }  
@@ -10,4 +12,50 @@
 
 .pagination-table{
   float: right;
+}
+
+.dx-datagrid-header-panel .dx-toolbar {
+  margin-bottom: 2px;
+}
+
+.page-content {
+  padding: 2px 10px 10px;
+}
+
+.search-form {
+  background: #f1f3f4;
+  padding: 4px 10px 4px;
+
+  >div {
+    width: 100%;
+    justify-content: flex-start !important;
+    align-items: center;
+    margin-right: 15px;
+  }
+
+  label {
+    margin-right: 10px;
+  }
+
+  .lable-item {
+    white-space: nowrap;
+    margin-right: 10px;
+    width: auto !important;
+  }
+
+  .col {
+    align-items: center;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+
+    .lable-item {
+      width: 110px;
+      display: inline-block;
+    }
+
+    .item:nth-child(2) {
+      margin-left: 30px;
+    }
+  }
 }
