--- a/src/views/PA/PA6/PA610/style/style.scss
+++ b/src/views/PA/PA6/PA610/style/style.scss
@@ -31,11 +31,19 @@
 
     ::v-deep .custom-layout {
         padding: 10px 10px 10px 0;
-       
+
         >div {
             border: 1px solid #d7d7d7;
             padding: 10px;
             min-height: 500px;
+        }
+    }
+
+    .custom-note {
+        >span {
+            font-size: 11px;
+            color: #666666;
+            padding-left: 5px;
         }
     }
 }
