--- a/src/views/PA/PA2/PA230/style/style.scss
+++ b/src/views/PA/PA2/PA230/style/style.scss
@@ -25,3 +25,21 @@
     display: flex;
     align-items: center;
 }
+
+.global-year{
+    margin-top: 6px;
+}
+
+.send-mail-230{
+    float: right;
+    .mail-230{
+        cursor: pointer;
+    }
+    .group-mail-230{
+        cursor: pointer;
+        margin-top: 8px;
+        margin-right: 13px;
+        margin-left: 10px;
+    }
+
+}
