--- a/src/views/PA/PA7/PA710/style/style.scss
+++ b/src/views/PA/PA7/PA710/style/style.scss
@@ -19,6 +19,10 @@
         }
     }
 
+    .text-align-center {
+        text-align: center;
+    }
+
     ::v-deep .ant-form-item-label>label {
         width: 180px;
         padding-left: 10px;
