--- a/src/views/PA/PA4/PA430/style/style.scss
+++ b/src/views/PA/PA4/PA430/style/style.scss
@@ -3,4 +3,16 @@
         display: flex;
         align-items: center;
       }
+      .content-flex{
+        margin: 10px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .selectRatio{
+        display: flex;
+        align-items: flex-start;
+      }
+  
+
+      
 }
