--- a/src/views/PA/PA6/PA630/style/style.scss
+++ b/src/views/PA/PA6/PA630/style/style.scss
@@ -1,63 +1,45 @@
-#pa-610 {
-    margin-top: 10px;
+.dflex {
+    display: flex;
+}
 
-    .total-user {
-        background-color: #337AB7;
-        color: white;
-        display: flex;
-        align-items: center;
+.custom-flex {
+    align-items: flex-start;
+    align-items: center;
+}
+.format-settings{
+    padding-top: 15px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    .format-settings-text{
+        padding-left: 18px;
+    }
+}
+.tax-select{
+    padding-top: 15px;
+}
 
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
+.created-date{
+    padding-top: 15px;
+    float: right;
+    display: flex;
+    align-items: center;
+}
 
-            .dx-icon-user {
-                font-size: 55px;
-            }
-        }
+.global-year{
+    margin-top: 6px;
+}
+
+.send-mail-230{
+    float: right;
+    .mail-230{
+        cursor: pointer;
+    }
+    .group-mail-230{
+        cursor: pointer;
+        margin-top: 8px;
+        margin-right: 13px;
+        margin-left: 10px;
     }
 
-    ::v-deep .ant-form-item-label>label {
-        width: 180px;
-        padding-left: 10px;
-        color: red;
-    }
-
-    .ant-form-item {
-        margin-bottom: 10px;
-    }
-
-    ::v-deep .custom-layout {
-        padding: 10px 10px 10px 0;
-
-        >div {
-            border: 1px solid #d7d7d7;
-            padding: 10px;
-            min-height: 500px;
-        }
-    }
-
-    .custom-note {
-        >span {
-            font-size: 11px;
-            color: #666666;
-            padding-left: 5px;
-        }
-    }
-
-    .custom-grade-cell {
-        display: flex;
-        align-items: center;
-        
-        .custom-grade-cell-tag {
-            padding: 3px 10px;
-            border: 1px solid #304967;
-            margin-right: 10px;
-            border-radius: 5px;
-            min-width: 50px;
-            text-align: center;
-        }
-    }
 }
