--- a/src/views/PA/PA5/PA530/style/style.scss
+++ b/src/views/PA/PA5/PA530/style/style.scss
@@ -1,5 +1,20 @@
-#pa-610 {
-    margin-top: 10px;
+#pa-530 {
+
+    ::v-deep .custom-mail-group {
+        .dx-button-content {
+            padding: 3px;
+        }
+    }
+
+    .custom-flex {
+        display: flex;
+        width: 100%;
+        align-items: center;
+
+        .ant-row {
+            width: 100%;
+        }
+    }
 
     .total-user {
         background-color: #337AB7;
@@ -50,7 +65,7 @@
     .custom-grade-cell {
         display: flex;
         align-items: center;
-        
+
         .custom-grade-cell-tag {
             padding: 3px 10px;
             border: 1px solid #304967;
