edit css pa 710 610 and edit 120

--- a/src/views/PA/PA6/PA610/style/style.scss
+++ b/src/views/PA/PA6/PA610/style/style.scss
@@ -2,7 +2,7 @@
     margin-top: 10px;
 
     .total-user {
-        background-color: #337AB7;
+        background-color: #17375E;
         color: white;
         display: flex;
         align-items: center;
