--- a/src/views/PA/PA5/PA530/style/style.scss
+++ b/src/views/PA/PA5/PA530/style/style.scss
@@ -29,23 +29,36 @@
         }
     }
 
-    .total-user {
-        background-color: #337AB7;
-        color: white;
-        display: flex;
-        align-items: center;
+    .title-body {
+        .title-body-left-1 {
+            display: flex;
+            align-items: center;
 
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
+            >div {
+                font-size: 16px;
+                padding-right: 5px;
+            }
 
-            .dx-icon-user {
-                font-size: 55px;
+            >span {
+                font-size: 12px;
             }
         }
+
+        .title-body-left-2 {
+            display: flex;
+            align-items: center;
+
+            >span {
+                font-size: 16px;
+                padding-right: 5px;
+            }
+        }
+
+        .title-body-right{
+            float: right;
+        }
     }
+
 
     ::v-deep .ant-form-item-label>label {
         width: 180px;
