popup send email

--- a/src/views/PA/PA6/PA630/style/style.scss
+++ b/src/views/PA/PA6/PA630/style/style.scss
@@ -30,16 +30,19 @@
     margin-top: 6px;
 }
 
-.send-mail-230{
-    float: right;
-    .mail-230{
-        cursor: pointer;
-    }
-    .group-mail-230{
-        cursor: pointer;
-        margin-top: 8px;
-        margin-right: 13px;
-        margin-left: 10px;
-    }
+// .send-mail-230{
+//     float: right;
+//     .mail-230{
+//         cursor: pointer;
+//     }
+//     .group-mail-230{
+//         cursor: pointer;
+//         margin-top: 8px;
+//         margin-right: 13px;
+//         margin-left: 10px;
+//     }
 
+// }
+.custom-action {
+    text-align: center;
 }
