send email single

--- a/src/views/PA/PA6/PA630/style/style.scss
+++ b/src/views/PA/PA6/PA630/style/style.scss
@@ -29,20 +29,12 @@
 .global-year{
     margin-top: 6px;
 }
+::v-deep .custom-mail-group {
+    .dx-button-content {
+        padding: 3px;
+    }
+}
 
-// .send-mail-230{
-//     float: right;
-//     .mail-230{
-//         cursor: pointer;
-//     }
-//     .group-mail-230{
-//         cursor: pointer;
-//         margin-top: 8px;
-//         margin-right: 13px;
-//         margin-left: 10px;
-//     }
-
-// }
 .custom-action {
     text-align: center;
 }
