--- a/src/views/PA/PA7/PA730/style/style.scss
+++ b/src/views/PA/PA7/PA730/style/style.scss
@@ -29,7 +29,11 @@
 .global-year {
   margin-top: 6px;
 }
-
+::v-deep .custom-mail-group {
+  .dx-button-content {
+      padding: 3px;
+  }
+}
 .group-mail-730 {
   cursor: pointer;
   margin: 0px 0px;
