--- a/src/views/PA/PA5/PA520/style/popupAddNew.scss
+++ b/src/views/PA/PA5/PA520/style/popupAddNew.scss
@@ -1,12 +1,13 @@
 #pa-520 {
-    .tab1 ::v-deep .ant-form-item-label>label {
-        width: 200px;
-        padding-left: 10px;
+    .tab1 ::v-deep .ant-form-item-label {
+        >label {
+            width: 150px;
+        }
     }
 
     ::v-deep .label-custom-width {
-        label {
-            width: auto!important;
+        >div:last-child {
+            padding-left: 0px;
         }
     }
 
