--- a/src/views/PA/PA5/PA520/style/tab2.scss
+++ b/src/views/PA/PA5/PA520/style/tab2.scss
@@ -140,5 +140,11 @@
 		border: 1px solid #ddd;
 		padding-left: 5px;
 		padding-top: 5px;
-	} 
+	}
+
+	.button-action {
+		width: 100%;
+		text-align: center;
+		margin-top: 30px
+	}
 }
