--- a/src/views/PA/PA5/PA520/style/tab2.scss
+++ b/src/views/PA/PA5/PA520/style/tab2.scss
@@ -121,7 +121,7 @@
 	.custom-deduction {
 		display: flex;
 		align-items: center;
-
+		justify-content: space-between;
 		>span {
 			margin-right: 10px;
 			min-width: 150px;
