--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -83,19 +83,25 @@ $lenght: 100;
   }
 
   .ml-#{$i} {
-    padding-left: $i+ px;
+    margin-left: $i+ px;
   }
 
   .mt-#{$i} {
-    padding-top: $i+ px;
+    margin-top: $i+ px;
   }
 
   .mr-#{$i} {
-    padding-right: $i+ px;
+    margin-right: $i+ px;
   }
 
   .mb-#{$i} {
-    padding-bottom: $i+ px;
+    margin-bottom: $i+ px;
+  }
+}
+
+@for $i from 1 through 50 {
+  .fz-#{$i} {
+    font-size: $i+ px;
   }
 }
 
