--- a/src/views/PA/PA5/PA520/style/tab2.scss
+++ b/src/views/PA/PA5/PA520/style/tab2.scss
@@ -118,20 +118,25 @@
 		}
 	}
 
-	.custom-deduction {
+	::v-deep .custom-deduction {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 
 		>span {
 			margin-right: 10px;
-			min-width: 150px;
+			width: 100%;
+
+			span {
+				width: 100% !important;
+			}
 		}
 
 		>div {
 			display: flex;
 			align-items: center;
 			margin-bottom: 5px;
+			width: 50%;
 		}
 	}
 
@@ -145,7 +150,8 @@
 
 	.button-action {
 		width: 100%;
-		text-align: center;
-		margin-top: 30px
-	} 
+		margin-top: 30px;
+		display: flex;
+		justify-content: center;
+	}
 }
