--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -81,8 +81,9 @@
     }
 
     .custom-grade-cell {
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
+        line-height: 30px;
 
         .custom-grade-cell-tag {
             padding: 3px 10px;
