--- a/src/views/CM/CM1/CM130/style/style.scss
+++ b/src/views/CM/CM1/CM130/style/style.scss
@@ -19,8 +19,8 @@
 ::v-deep .ant-form-item {
     margin-bottom: 10px;
 }
-::v-deep .dx-data-row.dx-state-hover:not(.dx-selection):not(.dx-row-inserted):not(.dx-row-removed):not(.dx-edit-row) > td:not(.dx-focused) {
-    background-color: rgb(105, 146, 107)!important;
-    color: white!important;
-    // cursor: pointer; 
-} 
+// ::v-deep .dx-data-row.dx-state-hover:not(.dx-selection):not(.dx-row-inserted):not(.dx-row-removed):not(.dx-edit-row) > td:not(.dx-focused) {
+//     background-color: rgb(105, 146, 107)!important;
+//     color: white!important;
+//     // cursor: pointer; 
+// } 
