--- a/src/views/PA/PA6/PA610/style/style.scss
+++ b/src/views/PA/PA6/PA610/style/style.scss
@@ -46,4 +46,9 @@
             padding-left: 5px;
         }
     }
+
+    ::v-deep .active-row-key {
+        background-color: #337AB7;
+        color: white;
+    }
 }
