--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -96,7 +96,7 @@
     }
 
     ::v-deep .active-row-key {
-        background-color: #337AB7 !important;
-        color: white !important;
+        background-color: #337AB7;
+        color: white;
     }
 }
