--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -1,61 +1,32 @@
 #pa-510 {
     margin-top: 10px;
-
-    .total-user {
-        display: flex;
-        align-items: center;
-
-        background-color: #17375E;
-        color: white;
-
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
-
-            .dx-icon-user {
-                font-size: 55px;
-            }
+    
+    
+    ::v-deep .ant-form-item-label {
+        >label {
+            width: 100px;
         }
     }
-
-    .current-user {
-        background-color: #D99694;
-        color: white;
+    .top-content {
+        margin-bottom: 10px;
+        padding: 2px 4px;
+        
+    }
+    .input-text {
         display: flex;
         align-items: center;
-
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
-
-            .dx-icon-user {
-                font-size: 55px;
-            }
+        margin-bottom: 10px;
+        >button {
+            margin: 0px 10px 0 0px;
         }
     }
-
-    .leave-user {
-        background-color: #BFBFBF;
-        color: white;
-        display: flex;
-        align-items: center;
-
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
-
-            .dx-icon-user {
-                font-size: 55px;
-            }
-        }
+    .header-text-3 {
+		background-color: #558ED5;
+		padding: 5px;
+		font-weight: bold;
+		font-size: 12px;
+		margin-bottom: 10px;
     }
-
 
 
     .ant-form-item {
@@ -93,4 +64,12 @@
             text-align: center;
         }
     }
+}
+.button-open-tab {
+    color: white;
+    background-color: blue;
+    font-size: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;;
 }
