--- a/src/views/PA/PA1/PA110/style/style.scss
+++ b/src/views/PA/PA1/PA110/style/style.scss
@@ -42,6 +42,9 @@
             min-height: 770px;
         }
     }
+    .ml-3 {
+        margin-left: 3px;
+    }
 
     .custom-note {
         >span {
