--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -76,3 +76,26 @@
     border-radius: 5px;
     padding: 5px 10px;;
 }
+.deduction-main {
+    max-height: 200px;
+    overflow: scroll;
+    border: 1px solid #ddd;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+::v-deep .custom-deduction {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    >span {
+        margin-right: 10px; 
+    }
+
+    >div {
+        display: flex;
+        align-items: center;
+        margin-bottom: 5px;
+        width: 50%;
+    }
+}
