pa-720/create-ui-graphql

--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -84,6 +84,9 @@
     ::v-deep .ant-form-item-label > label{
         width: 117px;
     }
+    ::v-deep .dx-master-detail-cell {
+        padding: 0px;
+    }
 }
 
 .button-open-tab {
