update code page pa-620

--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -158,4 +158,20 @@
         }
     }
 
+
+}
+
+.button-open-tab {
+    height: 100%;
+    padding-bottom: 7px;
+    width: 100px;
+}
+
+.custom-select-tab {
+    color: white;
+    background-color: blue;
+    font-size: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
 }
