--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -1,6 +1,8 @@
 #pa-620 {
     margin-top: 10px;
 
+
+
     .total-user {
         background-color: #17375E;
         color: white;
@@ -174,4 +176,8 @@
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
+}
+
+::v-deep .dx-datagrid-text-content {
+    white-space: pre-wrap;
 }
