--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -99,6 +99,9 @@
         width: 50%;
     }
 }
+::v-deep .dx-master-detail-cell {
+    padding: 0 !important;
+}
 .text-align-center {
     text-align: center;
 }
