update page pa-420

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -63,7 +63,7 @@
   margin-bottom: 5px;
 }
 
-$lenght: 100;
+$lenght: 50;
 
 @for $i from 1 through $lenght {
   .pl-#{$i} {
@@ -99,6 +99,10 @@ $lenght: 100;
   }
 }
 
+.wf-100 {
+  width: 100%;
+}
+
 @for $i from 1 through 50 {
   .fz-#{$i} {
     font-size: $i+ px;
@@ -124,4 +128,3 @@ $lenght: 100;
     color: red;
   }
 }
-
