update page pa-420

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -118,6 +118,10 @@ $lenght: 50;
   align-items: center;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .ant-modal-confirm-btns {
   float: inherit !important;
   text-align: center !important;
