--- a/src/views/PA/PA4/PA420/style/modalAdd.scss
+++ b/src/views/PA/PA4/PA420/style/modalAdd.scss
@@ -1,3 +1,8 @@
+.footer {
+    justify-content: center;
+    display: flex;
+}
+
 .ant-steps-navigation {
     margin-top: 5px;
 }
@@ -96,7 +101,8 @@
     line-height: 12px;
     color: #A6A6A6;
     width: 330px;
-} 
+}
+
 .d-flex-top {
     display: flex;
     align-items: flex-start;
