--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -1,77 +1,62 @@
 #pa-520 {
     margin-top: 10px;
-
     .total-user {
         display: flex;
         align-items: center;
-
         background-color: #17375E;
         color: white;
-
         >div {
             font-size: 16px;
             width: 50%;
             text-align: center;
             line-height: 16px;
-
             .dx-icon-user {
                 font-size: 55px;
             }
         }
     }
-
     .current-user {
         background-color: #D99694;
         color: white;
         display: flex;
         align-items: center;
-
         >div {
             font-size: 16px;
             width: 50%;
             text-align: center;
             line-height: 16px;
-
             .dx-icon-user {
                 font-size: 55px;
             }
         }
     }
-
     .leave-user {
         background-color: #BFBFBF;
         color: white;
         display: flex;
         align-items: center;
-
         >div {
             font-size: 16px;
             width: 50%;
             text-align: center;
             line-height: 16px;
-
             .dx-icon-user {
                 font-size: 55px;
             }
         }
     }
-
-
-
     .ant-form-item {
         margin-bottom: 10px;
     }
-
     ::v-deep .custom-layout {
         padding: 10px 10px 10px 0;
-
         >div {
+            height: 100%;
             border: 1px solid #d7d7d7;
             padding: 10px;
             min-height: 770px;
         }
     }
-
     .custom-note {
         >span {
             font-size: 11px;
@@ -79,12 +64,10 @@
             padding-left: 5px;
         }
     }
-
     .custom-grade-cell {
         // display: flex;
         // align-items: center;
         line-height: 30px;
-
         .custom-grade-cell-tag {
             padding: 3px 10px;
             border: 1px solid #304967;
@@ -94,7 +77,6 @@
             text-align: center;
         }
     }
-
     ::v-deep .active-row-key {
         background-color: #337AB7;
         color: white;
