--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -132,3 +132,10 @@ $lenght: 50;
     color: red;
   }
 }
+
+::v-deep .style-note {
+  line-height: 12px;
+  font-size: 11px;
+  color: gray;
+  padding-left: 5px;
+}
