--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -17,7 +17,7 @@
         align-items: center;
         margin-bottom: 10px;
         >button {
-            margin: 0px 10px 0 0px;
+            margin: 0px 10px;
         }
     }
     .header-text-3 {
