edit style common deduction

--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -95,7 +95,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 5px;
-        width: 50%;
+        // width: 50%;
     }
 }
 ::v-deep .dx-master-detail-cell {
