Code page pa-420

--- a/src/views/PA/PA4/PA420/style/style.scss
+++ b/src/views/PA/PA4/PA420/style/style.scss
@@ -157,8 +157,6 @@
             display: none;
         }
     }
-
-
 }
 
 .button-open-tab {
@@ -179,4 +177,22 @@
 ::v-deep .dx-datagrid-text-content {
     white-space: pre-wrap;
 }
- 
+
+
+.retirementType-1 {
+    background-color: #C00000;
+    text-align: center;
+    width: 60px;
+    border-radius: 5px;
+    padding: 3px 0;
+    color: white;
+}
+
+.retirementType-2 {
+    background-color: #77933C;
+    text-align: center;
+    width: 60px;
+    border-radius: 5px;
+    padding: 3px 0;
+    color: white;
+}
