--- a/src/layouts/style/style.scss
+++ b/src/layouts/style/style.scss
@@ -54,21 +54,21 @@
 
 		.arrow-left{
 				font-size: 30px;
-				color: gray;
+				color: white;
 				cursor: pointer;
 		}
 
 		.arrow-right{
 				font-size: 30px;
-				color: gray;
+				color: white;
 				cursor: pointer;
 				float: right;
 		}
 		.arrow-right:hover{
-			color:white !important;
+			color:gray !important;
 		}
 		.arrow-left:hover{
-			color:white !important;
+			color:gray !important;
 		}
 	}
 
